<resources>
    <string name="app_name">Mr.Mahesh</string>
    <string name="poster">Poster</string>
    <string name="sarileru_neekevvaru">Sarileru Neekevvaru</string>
    <string name="anil_ravipudi">By Anil Ravipudi</string>
    <string name="twenty_twenty">2020</string>
    <string name="mr_mahesh">Mr.Mahesh</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">zimneos.contact@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="poster_transition">PosterTransition</string>
    <string name="title_transition">TitleTransition</string>
    <string name="synopsis">Synopsis</string>
    <string name="sarileru_neekevvaru_summary">Ajay, an army major, journeys to Kurnool when he is assigned a covert mission. However, he finds himself in the middle of a major scam and sets out to uncover the truth.</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="coming_soon">Coming Soon</string>
</resources>