<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:background="@color/light_dark">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/poster"
        android:paddingTop="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/dark_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:0.4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444"
        app:shapeAppearanceOverlay="@style/corners_eight_percentage"
        tools:ignore="UnusedAttribute" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/poster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/poster"
        android:scaleType="fitXY"
        android:src="@drawable/sln"
        android:transitionName="@string/poster_transition"
        app:layout_constraintBottom_toBottomOf="@id/bg"
        app:layout_constraintDimensionRatio="1:1.4"
        app:layout_constraintEnd_toEndOf="@id/bg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266"
        app:layout_constraintWidth_percent="0.275"
        app:shapeAppearanceOverlay="@style/corners_three_percentage"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/hummer"
        android:gravity="start"
        android:text="@string/sarileru_neekevvaru"
        android:transitionName="@string/title_transition"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/favourite"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/director"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hummer"
        android:gravity="start"
        android:text="@string/anil_ravipudi"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hummer"
        android:gravity="center"
        android:text="@string/twenty_twenty"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="@+id/bg"
        app:layout_constraintStart_toEndOf="@+id/rating"
        app:layout_constraintTop_toBottomOf="@+id/director"
        app:layout_constraintVertical_bias="0.75"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:id="@+id/rating"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/rating"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="@+id/director"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/director"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth_percent="0.3"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/favourite"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/favourite"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/bg"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>